# Quality_Factor_and_Frequency_Shift_Fitting

./: .gitignore  LICENSE  README.md  pyproject.toml
cpwfit/: __init__.py
cpwfit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpwfit/models/: __init__.py  freqshift_loss_channels.py  qint_allcurves_lin.py  qint_allcurves_semilog.py  qint_loss_channels.py  qint_singlecurve.py
docs/: README_equations.md
examples/csv_data/freqshift/: Freq_shift_nbonly.csv
examples/csv_data/qint/: 100dBm.csv  120dBm.csv  140dBm.csv  160dBm.csv  80dBm.csv
examples/plots/freqshift/: freqshift.json
examples/plots/qint/: qint_lin.json  qint_log.json  qint_singlecurve.json
